[package]
authors = ["ian huang <ian1314159@gmail.com>"]
description = "Rust component of library template."
edition = "2018"
license = "MIT"
name = "core"
repository = "https://github.com/iantheearl/rust-typescript-lib"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "core/lib.rs"

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.64"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
